# RAG-Application-

./: pyproject.toml
LLMs-Rag-Observability-main/: README.md  traces.json
LLMs-Rag-Observability-main/app/rag/: query.py
LLMs-Rag-Observability-main/dashboard/: config.py
LLMs-Rag-Observability-main/frontend/: app.py  config.py
app/: config.py  main.py
app/observability/: db.py  logger.py  tracing.py
app/rag/: ingest.py  tokenizer.py
dashboard/: app.py
tests/: test_rag_query.py
